update donor list

--- a/app/assets/sass/main.scss
+++ b/app/assets/sass/main.scss
@@ -14,15 +14,19 @@
 // Add your custom CSS/Sass styles below...
 ///////////////////////////////////////////
 
-li:last-of-type ul {
 
-  &::before {
+li ul::before {
 
-    content: "";
-    display: block;
-    @include nhsuk-responsive-margin(2, 'bottom');
-  }
+  content: "";
+  display: block;
+  @include nhsuk-responsive-margin(2, 'bottom');  // or $whateverTheRightVariableIsMate
+}
 
+li + ul::before {
+
+  content: "";
+  display: block;
+  @include nhsuk-responsive-margin(2, 'bottom');  // or $whateverTheRightVariableIsMate
 }
 
 li ul {
