--- a/app/assets/sass/prototype/_list.scss
+++ b/app/assets/sass/prototype/_list.scss
@@ -17,20 +17,20 @@
 
 .app-list-cards__item {
 
-  margin-bottom: nhsuk-spacing(5);
+  @include nhsuk-responsive-margin(5, 'bottom');
 
 }
 
 .app-list-cards__heading {
 
   color: $color_nhsuk-blue;
-  margin-bottom: nhsuk-spacing(2);
+  @include nhsuk-responsive-margin(2, 'bottom');
 }
 
 .app-list-cards__heading--no-link {
 
   color: $color_nhsuk-black;
-  margin-bottom: nhsuk-spacing(2);
+  @include nhsuk-responsive-margin(2, 'bottom');
 }
 
 .app-list--unstyled {
