--- a/app/views/register-as-a-data-donor/v1/register/do-you-want-to-register-3.html
+++ b/app/views/register-as-a-data-donor/v1/register/do-you-want-to-register-3.html
@@ -49,7 +49,7 @@
       ]
     }) }}
 
-    <input type="submit" class="nhsuk-button" value="Continue">
+    <input type="submit" class="nhsuk-button" value="Confirm">
     </input>
 
   </form>
