--- a/app/views/register-as-a-data-donor/v1/your-profile/your-data-donor-profile.html
+++ b/app/views/register-as-a-data-donor/v1/your-profile/your-data-donor-profile.html
@@ -25,7 +25,7 @@
       <h1>{{ contentTitle }}</h1>
       <ul class="app-list--unstyled app-list-cards">
         <li class="app-list-cards__item">
-          <a href="/{{ PROTOTYPEURL }}/v1/index">
+          <a href="/{{ PROTOTYPEURL }}/index">
             <h2 class="app-list-cards__heading nhsuk-heading-s">See how your data has been shared </h2>
           </a>
         </li>
@@ -33,12 +33,12 @@
       <h2>Manage your profile</h2>
       <ul class="app-list--unstyled app-list-cards">
         <li class="app-list-cards__item">
-          <a href="/{{ PROTOTYPEURL }}/v1/index">
+          <a href="/{{ PROTOTYPEURL }}/index">
             <h3 class="app-list-cards__heading nhsuk-heading-s">Change your contact preference </h3>
           </a>
         </li>
         <li class="app-list-cards__item">
-          <a href="/{{ PROTOTYPEURL }}/v1/index">
+          <a href="/{{ PROTOTYPEURL }}/index">
             <h3 class="app-list-cards__heading nhsuk-heading-s">Stop sharing your data </h3>
           </a>
         </li>
