Updated index file to new we added you page

--- a/app/views/register-as-a-data-donor/v1/index.html
+++ b/app/views/register-as-a-data-donor/v1/index.html
@@ -85,10 +85,13 @@
       <h2>Joining the register</h2>
       <ul>
         <li>
+          <a href="/{{ PROTOTYPEURL }}/register/check-your-details">Check your details</a>
+        </li>
+        <li>
           <a href="/{{ PROTOTYPEURL }}/register/do-you-want-to-register-3">Do you want to register</a>
         </li>
         <li>
-          <a href="/{{ PROTOTYPEURL }}/register/weve-added-you">We've added you to the register</a>
+          <a href="/{{ PROTOTYPEURL }}/register/weve-added-you-2">We've added you to the register</a>
         </li>
       </ul>
 
