Updated data donor profile page

--- a/app/views/register-as-a-data-donor/v1/your-profile/your-data-donor-profile.html
+++ b/app/views/register-as-a-data-donor/v1/your-profile/your-data-donor-profile.html
@@ -33,7 +33,7 @@
       <h2>Manage your profile</h2>
       <ul class="app-list--unstyled app-list-cards">
         <li class="app-list-cards__item">
-          <a href="/{{ PROTOTYPEURL }}/index">
+          <a href="/{{ PROTOTYPEURL }}/contact-preference/your-current-preference">
             <h3 class="app-list-cards__heading nhsuk-heading-s">Change your contact preference </h3>
           </a>
         </li>
