Fixed visually hidden code

--- a/app/views/register-as-a-data-donor/v1/contact-preference/your-current-preference.html
+++ b/app/views/register-as-a-data-donor/v1/contact-preference/your-current-preference.html
@@ -26,7 +26,7 @@
 
       <p>
         We'll contact you by <strong>email</strong>
-        | <a href="/{{ PROTOTYPEURL }}/change-contact-preference-2">Change <span class="util-visuallyhidden">your preference</span></a></p>
+        | <a href="/{{ PROTOTYPEURL }}/change-contact-preference-2">Change <span class="nhsuk-u-visually-hidden">your preference</span></a></p>
 
 
 
