Added full stop

--- a/app/views/register-as-a-data-donor/v1/contact-preference/contact-preference-updated.html
+++ b/app/views/register-as-a-data-donor/v1/contact-preference/contact-preference-updated.html
@@ -24,7 +24,7 @@
 
       <h1>{{ contentTitle }}</h1>
 
-      <p>We will contact you by <strong>{{ data['contactPreference'] }}</strong></p>
+      <p>We will contact you by <strong>{{ data['contactPreference'] }}</strong>.</p>
 
       <p>You can change your contact preference at any time.</p>
 
