Changed text to HTML

--- a/app/views/register-as-a-data-donor/v1/register/check-your-details.html
+++ b/app/views/register-as-a-data-donor/v1/register/check-your-details.html
@@ -47,7 +47,7 @@
         text: "Address"
       },
       value: {
-        text: "200 East Parade<br>Lincoln<br>LN4 7TS"
+        html: "200 East Parade<br>Lincoln<br>LN4 7TS"
       }
     }
   ]
