--- a/app/views/register-as-a-data-donor/v1/index.html
+++ b/app/views/register-as-a-data-donor/v1/index.html
@@ -93,21 +93,21 @@
         <li>
           <a href="/{{ PROTOTYPEURL }}/register/weve-added-you-2">We've added you to the register</a>
         </li>
+        <li>
+          <a href="/{{ PROTOTYPEURL }}/register/contact-nhs-login">Incorrect details - couldn't add user to the register</a>
+        </li>
       </ul>
 
       <h2>Set your contact preferences</h2>
       <ul>
       <li>
-        <a href="/{{ PROTOTYPEURL }}/contact-preference/future-contact-preference-email">Future contact preference email</a>
+        <a href="/{{ PROTOTYPEURL }}/contact-preference/your-current-preference">User's current contact preference</a>
       </li>
       <li>
-        <a href="/{{ PROTOTYPEURL }}/contact-preference/future-contact-preference-text">Future contact preference text</a>
+        <a href="/{{ PROTOTYPEURL }}/contact-preference/change-contact-preference-2">Change contact preference</a>
       </li>
       <li>
-        <a href="/{{ PROTOTYPEURL }}/contact-preference/contact-preference-saved">Contact preference saved</a>
-      </li>
-      <li>
-        <a href="/{{ PROTOTYPEURL }}/contact-preference/change-contact-preference">Change contact preference</a>
+        <a href="/{{ PROTOTYPEURL }}/contact-preference/contact-preference-updated">Contact preference updated</a>
       </li>
     </ul>
 
