Updated index file to include stop sharing pages

--- a/app/views/register-as-a-data-donor/v1/index.html
+++ b/app/views/register-as-a-data-donor/v1/index.html
@@ -119,6 +119,12 @@
       <li>
         <a href="/{{ PROTOTYPEURL }}/your-profile/see-how-your-data-has-been-shared">See how your data has been shared</a>
       </li>
+      <li>
+        <a href="/{{ PROTOTYPEURL }}/your-profile/stop-sharing-your-data">Stop sharing your data</a>
+      </li>
+      <li>
+        <a href="/{{ PROTOTYPEURL }}/your-profile/stop-sharing-confirmed">Stop sharing confirmed</a>
+      </li>
     </ul>
 
       <h2>Get a match</h2>
