Created stop sharing your data pages and linked up flow

--- a/app/views/register-as-a-data-donor/v1/your-profile/your-data-donor-profile.html
+++ b/app/views/register-as-a-data-donor/v1/your-profile/your-data-donor-profile.html
@@ -38,7 +38,7 @@
           </a>
         </li>
         <li class="app-list-cards__item">
-          <a href="/{{ PROTOTYPEURL }}/index">
+          <a href="/{{ PROTOTYPEURL }}/your-profile/stop-sharing-your-data">
             <h3 class="app-list-cards__heading nhsuk-heading-s">Stop sharing your data </h3>
           </a>
         </li>
