Updated index file with google deepmind page

--- a/app/views/register-as-a-data-donor/v1/index.html
+++ b/app/views/register-as-a-data-donor/v1/index.html
@@ -128,6 +128,14 @@
     </ul>
 
       <h2>Get a match</h2>
+      <ul>
+        <li>
+          <a href="/{{ PROTOTYPEURL }}/your-match/we-matched-you">Data donation request email</a>
+        </li>
+        <li>
+          <a href="/{{ PROTOTYPEURL }}/your-match/google-deepmind-study">Google DeepMind study</a>
+        </li>
+      </ul>
 
       <h2>See how your data has been used</h2>
 
