--- a/app/views/register-as-a-data-donor/v1/your-match/we-matched-you.html
+++ b/app/views/register-as-a-data-donor/v1/your-match/we-matched-you.html
@@ -237,7 +237,7 @@
             <li>your age</li>
             <li>where you live</li>
           </ul>
-          <p><a href="" style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;">Find out more about this research study</a></p>
+          <p><a href="/{{ PROTOTYPEURL }}/your-match/google-deepmind-study" style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;">Find out more about this research study</a></p>
 
             NHS<br style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;" />
             <a href="/{{ PROTOTYPEURL }}" style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;" >www.nhs.uk/register-as-a-data-donor</a>
