Creating logic for how often do you want updates about study

--- a/app/views/register-as-a-data-donor/v1/your-match/we-will-share-your-data.html
+++ b/app/views/register-as-a-data-donor/v1/your-match/we-will-share-your-data.html
@@ -28,7 +28,7 @@
       <form action="/{{ PROTOTYPEURL }}/your-match/we-will-share-your-data" method="post">
         {{ radios({
           "idPrefix": "yes",
-          "name": "enternamehere",
+          "name": "researchContactPreference",
           "fieldset": {
             "legend": {
               "text": question,
