add we've added you template logic

--- a/app/views/register-as-a-data-donor/v1/register/weve-added-you-2.html
+++ b/app/views/register-as-a-data-donor/v1/register/weve-added-you-2.html
@@ -30,7 +30,7 @@
 
       <p>If you’re happy to share your data, we’ll share your data with the organisation.</p>
 
-      <p><a href="/register-as-a-data-donor/v1/your-profile/your-data-donor-profile">See your data donor profile</a></p>
+      <p><a href="/{{ PROTOTYPEURL }}/your-profile/your-data-donor-profile">See your data donor profile</a></p>
 
     </div>
   </div>
