Added full stops

--- a/app/views/register-as-a-data-donor/v1/your-match/contact-preference-saved-research.html
+++ b/app/views/register-as-a-data-donor/v1/your-match/contact-preference-saved-research.html
@@ -26,11 +26,11 @@
       {% if data['researchContactPreference'] == 'never' %}
         <p>We will not send you any updates about this research study.</p>
       {% elif data['researchContactPreference'] == 'week' %}
-        <p>We will send you an update about this research study once a week</p>
+        <p>We will send you an update about this research study once a week.</p>
       {% elif data['researchContactPreference'] == 'month' %}
-        <p>We will send you an update about this research study once a month</p>
+        <p>We will send you an update about this research study once a month.</p>
       {% else %}
-        <p>We will send you an update about this research study when it has finished</p>
+        <p>We will send you an update about this research study when it has finished.</p>
       {% endif %}
 
       {{ backLink({
