Added get a match pages to the index file

--- a/app/views/register-as-a-data-donor/v1/index.html
+++ b/app/views/register-as-a-data-donor/v1/index.html
@@ -135,6 +135,15 @@
         <li>
           <a href="/{{ PROTOTYPEURL }}/your-match/google-deepmind-study">Google DeepMind study</a>
         </li>
+        <li>
+          <a href="/{{ PROTOTYPEURL }}/your-match/we-wont-share-your-data">User selects no to sharing their data</a>
+        </li>
+        <li>
+          <a href="/{{ PROTOTYPEURL }}/your-match/we-will-share-your-data">User selects yes and chooses how frequently they want updates</a>
+        </li>
+        <li>
+          <a href="/{{ PROTOTYPEURL }}/your-match/contact-preference-saved-research">Research study contact preference saved</a>
+        </li>
       </ul>
 
       <h2>See how your data has been used</h2>
