Updated your profile pages and created new your profile page

--- a/app/views/register-as-a-data-donor/v1/your-profile/still-sharing-confirmed.html
+++ b/app/views/register-as-a-data-donor/v1/your-profile/still-sharing-confirmed.html
@@ -1,6 +1,6 @@
 {% set PROTOTYPEURL = "register-as-a-data-donor/v1" %}
 {% set serviceName = "Register as a data donor" %}
-{% set contentTitle = "We've removed you from the data donor register" %}
+{% set contentTitle = "You're still on the data donor register" %}
 {% set title = contentTitle + " - " + serviceName %}
 {% block pageScripts %}
 {% endblock %}
@@ -31,11 +31,7 @@
 
       <h1>{{ contentTitle }}</h1>
 
-      <p>We've sent you confirmation by {{ contactPreference }}.</p>
-
-      <p>We'll no longer contact you about sharing your data for research studies.</p>
-
-      <p>You can rejoin the data donor register at any time.</p>
+      <p>We'll continue to contact you about sharing your data for research studies.</p>
 
     </div>
   </div>
