--- a/app/views/register-as-a-data-donor/v1/your-profile/your-data-donor-profile.html
+++ b/app/views/register-as-a-data-donor/v1/your-profile/your-data-donor-profile.html
@@ -39,7 +39,7 @@
         </li>
         <li class="app-list-cards__item">
           <a href="/{{ PROTOTYPEURL }}/your-profile/stop-sharing-your-data">
-            <h3 class="app-list-cards__heading nhsuk-heading-s">Stop sharing your data </h3>
+            <h3 class="app-list-cards__heading nhsuk-heading-s">Get removed from the data donor register</h3>
           </a>
         </li>
       </ul>
