--- a/app/views/register-as-a-data-donor/v1/index.html
+++ b/app/views/register-as-a-data-donor/v1/index.html
@@ -139,7 +139,13 @@
           <a href="/{{ PROTOTYPEURL }}/your-match/we-wont-share-your-data">User selects no to sharing their data</a>
         </li>
         <li>
-          <a href="/{{ PROTOTYPEURL }}/your-match/we-will-share-your-data">User selects yes and chooses how frequently they want updates</a>
+          <a href="/{{ PROTOTYPEURL }}/your-match/we-will-share-your-data">User selects yes and chooses if they want updates</a>
+        </li>
+        <li>
+          <a href="/{{ PROTOTYPEURL }}/your-match/we-will-share-your-data-updates">User chooses how frequently they want updates</a>
+        </li>
+        <li>
+          <a href="/{{ PROTOTYPEURL }}/your-match/no-updates">User selects no updates</a>
         </li>
         <li>
           <a href="/{{ PROTOTYPEURL }}/your-match/contact-preference-saved-research">Research study contact preference saved</a>
