Added still sharing your data page to index file

--- a/app/views/register-as-a-data-donor/v1/index.html
+++ b/app/views/register-as-a-data-donor/v1/index.html
@@ -125,6 +125,9 @@
       <li>
         <a href="/{{ PROTOTYPEURL }}/your-profile/stop-sharing-confirmed">Stop sharing confirmed</a>
       </li>
+      <li>
+        <a href="/{{ PROTOTYPEURL }}/your-profile/still-sharing-confirmed">User still sharing their data</a>
+      </li>
     </ul>
 
       <h2>Get a match</h2>
