--- a/app/views/register-as-a-data-donor/v1/index.html
+++ b/app/views/register-as-a-data-donor/v1/index.html
@@ -91,10 +91,13 @@
           <a href="/{{ PROTOTYPEURL }}/register/do-you-want-to-register-3">Do you want to register</a>
         </li>
         <li>
-          <a href="/{{ PROTOTYPEURL }}/register/weve-added-you-2">We've added you to the register</a>
+          <a href="/{{ PROTOTYPEURL }}/register/weve-added-you-3">We've added you to the register</a>
         </li>
         <li>
           <a href="/{{ PROTOTYPEURL }}/register/contact-nhs-login">Incorrect details - couldn't add user to the register</a>
+        </li>
+        <li>
+          <a href="/{{ PROTOTYPEURL }}/register/how-your-profile-works">How your profile works</a>
         </li>
       </ul>
 
