add email template

--- a/app/assets/sass/main.scss
+++ b/app/assets/sass/main.scss
@@ -9,6 +9,7 @@
 @import 'components/card';
 
 @import 'prototype/list';
+@import 'prototype/email';
 
 ///////////////////////////////////////////
 // Add your custom CSS/Sass styles below...
