--- a/app/views/register-as-a-data-donor/v1/contact-preference/contact-preference-saved.html
+++ b/app/views/register-as-a-data-donor/v1/contact-preference/contact-preference-saved.html
@@ -1,4 +1,4 @@
-{% set PROTOTYPEURL = "register-as-a-data-donor/v1/contact-preference" %}
+{% set PROTOTYPEURL = "register-as-a-data-donor/v1" %}
 {% set serviceName = "Register as a data donor" %}
 {% set contentTitle = "We've saved your contact preference" %}
 {% set title = contentTitle + " - " + serviceName %}
@@ -26,7 +26,7 @@
 
       <p>You can change your contact preference at any time.</p>
 
-      <form action="/register-as-a-data-donor/v1/your-profile/your-data-donor-profile" method="get">
+      <form action="/{{ PROTOTYPEURL }}/your-profile/your-data-donor-profile" method="get">
 
         <input type="submit" class="nhsuk-button" value="See your data donor profile">
         </input>
