--- a/app/views/register-as-a-data-donor/v1/your-profile/stop-sharing-confirmed.html
+++ b/app/views/register-as-a-data-donor/v1/your-profile/stop-sharing-confirmed.html
@@ -31,7 +31,7 @@
 
       <h1>{{ contentTitle }}</h1>
 
-      <p>We've sent you confirmation by {{ contactPreference }}.</p>
+      <p>We've sent you confirmation by {{ contactPreference | trim }}.</p>
 
       <p>We'll no longer contact you about sharing your data for research studies.</p>
 
