Added br to email template

--- a/app/views/examples/pages/email.html
+++ b/app/views/examples/pages/email.html
@@ -36,7 +36,7 @@
 
 {% block footerContent %}
 <p class="nhsuk-body-s">
-  NHS Digital
+  NHS Digital <br />
   1 Trevelyan Square, Boar Lane <br />
   Leeds, West Yorkshire <br />
   0300 303 5678 <br />
