add email example

--- a/app/views/examples/index.html
+++ b/app/views/examples/index.html
@@ -64,6 +64,12 @@
             <p>Ask users for their log in details</p>
           </a>
         </li>
+        <li class="app-list-cards__item">
+          <a href="/{{ PROTOTYPEURL }}/pages/email">
+            <h3 class="app-list-cards__heading nhsuk-heading-m">Email</h3>
+            <p>Prototype page for emails (not production email code, an example to mock emails)</p>
+          </a>
+        </li>
       </ul>
 
       <h2>Elements</h2>
