--- a/app/views/examples/pages/email.html
+++ b/app/views/examples/pages/email.html
@@ -35,7 +35,9 @@
 {% endblock %}
 
 {% block footerContent %}
+<p class="nhsuk-body-s"><strong>Why you got sent this email</strong><br /> You are receiving this email because you've clicked a link to see it</p>
 <p class="nhsuk-body-s">
+  <strong>Contact details</strong><br />
   NHS Digital <br />
   1 Trevelyan Square, Boar Lane <br />
   Leeds, West Yorkshire <br />
