--- a/app/views/register-as-a-data-donor/v1/register/weve-added-you-3.html
+++ b/app/views/register-as-a-data-donor/v1/register/weve-added-you-3.html
@@ -28,12 +28,9 @@
 
       <p>You now have a data donor profile.</p>
 
-      <form action="/{{ PROTOTYPEURL }}/register/how-your-profile-works" method="get">
+      <p><a href="/{{ PROTOTYPEURL }}/your-profile/your-data-donor-profile">Go to your data donor profile</a></p>
 
-        <input type="submit" class="nhsuk-button" value="Continue">
-        </input>
 
-      </form>
     </div>
   </div>
 {% endblock %}
