--- a/app/views/register-as-a-data-donor/v1/register/check-your-details.html
+++ b/app/views/register-as-a-data-donor/v1/register/check-your-details.html
@@ -53,7 +53,7 @@
   ]
 }) }}
 
-<form action="#" method="post">
+<form action="/{{ PROTOTYPEURL }}/register/how-your-profile-works" method="post">
   {{ radios({
     "idPrefix": "nhs",
     "name": "checkDetails",
