--- a/app/views/register-as-a-data-donor/v1/your-match/no-updates.html
+++ b/app/views/register-as-a-data-donor/v1/your-match/no-updates.html
@@ -1,6 +1,6 @@
 {% set PROTOTYPEURL = "register-as-a-data-donor/v1" %}
 {% set serviceName = "Register as a data donor" %}
-{% set contentTitle = "We've saved your preference" %}
+{% set contentTitle = "We will not send you any updates about this research study" %}
 {% set title = contentTitle + " - " + serviceName %}
 {% block pageScripts %}
 {% endblock %}
@@ -24,7 +24,7 @@
 
       <h1>{{ contentTitle }}</h1>
 
-      <p>We will not send you any updates about this research study.</p>
+      <p>You can change this at any time on your data donor profile.</p>
 
       {{ backLink({
         "href": "/register-as-a-data-donor/v1/your-profile/your-data-donor-profile",
