--- a/app/views/register-as-a-data-donor/v1/your-match/we-will-share-your-data-updates.html
+++ b/app/views/register-as-a-data-donor/v1/your-match/we-will-share-your-data-updates.html
@@ -38,11 +38,11 @@
           "items": [
             {
               "value": "week",
-              "text": "Once a week"
+              "text": "Every week"
             },
             {
               "value": "month",
-              "text": "Once a month"
+              "text": "Every month"
             },
             {
               "value": "finished",
