--- a/app/views/register-as-a-data-donor/v1/your-match/we-will-share-your-data.html
+++ b/app/views/register-as-a-data-donor/v1/your-match/we-will-share-your-data.html
@@ -1,6 +1,6 @@
 {% set PROTOTYPEURL = "register-as-a-data-donor/v1" %}
 {% set serviceName = "Register as a data donor" %}
-{% set contentTitle = "We will share your data with Google DeepMind" %}
+{% set contentTitle = "We will share your data with Google DeepMind for this research study" %}
 {% set question = "Would you like updates about this research study?" %}
 {% set title = contentTitle + " - " + serviceName %}
 {% block pageScripts %}
