Updated stop sharing your data question

--- a/app/views/register-as-a-data-donor/v1/your-profile/stop-sharing-your-data.html
+++ b/app/views/register-as-a-data-donor/v1/your-profile/stop-sharing-your-data.html
@@ -1,7 +1,7 @@
 {% set PROTOTYPEURL = "register-as-a-data-donor/v1" %}
 {% set serviceName = "Register as a data donor" %}
 {% set contentTitle = "Get removed from the data donor register" %}
-{% set question = "Do you want us to remove you from the data donor register?" %}
+{% set question = "Do you want to be removed from the data donor register?" %}
 {% set title = contentTitle + " - " + serviceName %}
 {% block pageScripts %}
 {% endblock %}
