--- a/app/assets/sass/prototype/_email.scss
+++ b/app/assets/sass/prototype/_email.scss
@@ -30,7 +30,7 @@
 .app-width__footer--email {
 
   background-color: $color_nhsuk-grey-4;
-  padding: nhsuk-spacing(3) 0;
+  padding: nhsuk-spacing(3);
   border: none;
 
 }
