add heading two for example

--- a/app/views/examples/pages/email.html
+++ b/app/views/examples/pages/email.html
@@ -22,7 +22,9 @@
     <div class="nhsuk-grid-column-full">
       <h1 class="nhsuk-heading-l">{{ contentTitle}}</h1>
       <p>This is an example email. It's not really the code for email.</p>
+      <h2 class="nhsuk-heading-m">What happens next</h2>
       <p>This is a template mocked up to act like the ideal presentation of an email.</p>
+      <p>You do not have to do anything.</p>
     </div>
   </div>
 {% endblock %}
