Updated v2 index file for scenarios

--- a/app/views/register-as-a-data-donor/v2/index.html
+++ b/app/views/register-as-a-data-donor/v2/index.html
@@ -30,7 +30,33 @@
         {{ contentTitle }}
         <span class="nhsuk-caption-xl nhsuk-caption--bottom"> {{ serviceName }}</span>
       </h1>
-    
+
+      <ul class="app-list--unstyled app-list-cards">
+        <li class="app-list-cards__item">
+          <a href="/register-as-a-data-donor/v2/register/check-your-details">
+            <h2 class="app-list-cards__heading nhsuk-heading-m">Scenario 1</h2>
+            <p>Joining the data register</p>
+          </a>
+        </li>
+      </ul>
+
+      <ul class="app-list--unstyled app-list-cards">
+        <li class="app-list-cards__item">
+          <a href="/register-as-a-data-donor/v1/your-match/we-matched-you-email-2">
+            <h2 class="app-list-cards__heading nhsuk-heading-m">Scenario 2</h2>
+            <p>Get a match and choose if you want to donate your data to the study</p>
+          </a>
+        </li>
+      </ul>
+
+      <ul class="app-list--unstyled app-list-cards">
+        <li class="app-list-cards__item">
+          <a href="/register-as-a-data-donor/v1/your-profile/your-data-donor-profile">
+            <h2 class="app-list-cards__heading nhsuk-heading-m">Scenario 3</h2>
+            <p>Manage your contact preference</p>
+          </a>
+        </li>
+      </ul>
 
 
 
